change env example

--- a/dbrain/example.env
+++ b/dbrain/example.env
@@ -8,3 +8,9 @@ NVIDIA_DRIVER_CAPABILITIES=all
 
 # license
 LICENSE=ВАШ_КЛЮЧ_ЛИЦЕНЗИИ
+
+LICENSE_URL=https://license.ml.dbrain.io/check/v2
+LICENSE_PATH=/etc/license.txt
+LICENSE_META_PATH=/etc/meta.txt
+LICENSES_PATH=/etc/licenses
+
